# oauth-auth

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  vercel.json
oauth_auth/: main.py  setting.py
oauth_auth/data/: db.py
oauth_auth/model/: models.py
oauth_auth/service/: auth.py
oauth_auth/utils/: auth.py
oauth_auth/web/: auth.py
