[tool.poetry]
name = "oauth-auth"
version = "0.1.0"
description = ""
authors = ["MuhammadAhsaanAbbasi <mahsaanabbasi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.16"
psycopg = {extras = ["binary"], version = "^3.1.18"}
pytest = "^8.0.2"
httpx = "^0.27.0"
itsdangerous = "^2.1.2"
email-validator = "^2.1.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
types-passlib = "^1.7.7.20240311"
types-python-jose = "^3.3.4.20240106"
python-multipart = "^0.0.9"
google-api-python-client = "^2.123.0"
google-auth = "^2.29.0"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
mypy = "^1.9.0"
python-dotenv = "^1.0.1"
types-pillow = "^10.2.0.20240311"
types-requests = "^2.31.0.20240311"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
